# bd_conference

./: .gitignore  README.md  bd_conference.pptx  bd_conference.pptx:Zone.Identifier  pyproject.toml
bd_conference/: x.ipynb
easy_access_zone/: config.py  main.py  pipeline.py  queries.py
easy_access_zone/conf/: dev.conf
